<resources>

    <!-- TRANSITIONS -->
    <string name="transition_1">transition_1</string>
    <string name="transition_2">transition_2</string>

    <!-- UI -->
    <string name="app_name">truckie</string>
    <string name="app_dev">Developed by</string>
    <string name="app_devp">Raphael Barbosa and Demetrio Guilardi</string>

    <string name="placeholder_default">--</string>
    <string name="placeholder_set_date">Please set a date</string>
    <string name="placeholder_set_time">Please set a time</string>
    <string name="placeholder_search_address">Enter Address, City or Zip code</string>
    <string name="placeholder_extra_info">Instructions / Extra Info</string>
    <string name="placeholder_extra_info_empty">No further instructions or extra info needed</string>
    <string name="placeholder_place_bid">Place a bid</string>
    <string name="placeholder_widget">There is no delivery to show</string>
    <string name="label_pickup">pickup:</string>
    <string name="label_delivery">delivery:</string>
    <string name="popup_quit_text">Are you sure you want to quit?</string>
    <string name="popup_quit_yes">Yes</string>
    <string name="popup_quit_no">No</string>
    <string name="new_delivery">Request new delivery</string>
    <string name="new_delivery_title_origin">Pickup address</string>
    <string name="new_delivery_title_destin">Delivery address</string>
    <string name="new_delivery_title_details">Details</string>
    <string name="delivery_auction_title">Delivery auction</string>
    <string name="delivery_details_title">Delivery details</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="login">login</string>
    <string name="login_error">Login Error</string>
    <string name="signup_link">No account yet? Create one</string>
    <string name="signup">signup</string>
    <string name="personal_info">Personal Information</string>
    <string name="name">Name</string>
    <string name="phone_number_1">Phone 1</string>
    <string name="phone_number_2">Phone 2</string>
    <string name="driver_license">Driver License #</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="zip_code">ZIP Code</string>
    <string name="vehicle_information">Vehicle Info</string>
    <string name="login_information">Login Info</string>
    <string name="next">next</string>
    <string name="origin">Pickup</string>
    <string name="destin">Delivery</string>
    <string name="use_this">use this</string>
    <string name="submit">submit</string>
    <string name="set">set</string>
    <string name="my_deliveries">My Deliveries</string>
    <string name="my_delivery">My Delivery Request</string>
    <string name="auctions">Auctions</string>
    <string name="no_auctions">There\'s no active auctions</string>
    <string name="no_deliveries">You have no deliveries yet</string>
    <string name="no_bids">There\'s no bids yet</string>
    <string name="first_to_bid">Be the first to bid</string>
    <string name="current_bid">Current Bid: $%1$s.00</string>
    <string name="bid_too_low">Bid must be greater than $%1$d.00</string>
    <string name="your_current_bid">Your\'s is the current Bid: $%1$s.00</string>
    <string name="bid">bid</string>
    <string name="accept">accept</string>
    <string name="loading">loading...</string>
    <string name="widget_title">My Deliveries</string>
    <string name="night_mode">Night Mode</string>
    <string name="logout">Logout</string>

    <string-array name="spinner_default_placeholder_array">
        <item>@string/placeholder_default</item>
    </string-array>

    <!-- ERRORS -->
    <plurals name="err_found_error">
        <item quantity="one">%1$d error found</item>
        <item quantity="other">%1$d errors found</item>
    </plurals>
    <string name="err_empty_field">can\'t be empty</string>
    <string name="err_empty_spinner">select</string>
    <string name="err_passwords_match">passwords don\'t match</string>

    <!-- LISTS -->
    <string name="country_default_value">Country</string>
    <string-array name="countries_array">
        <item>@string/country_default_value</item>
        <item>Brazil</item>
        <item>United States</item>
    </string-array>

    <string-array name="states_brazil_array" translatable="false">
        <item>@string/placeholder_default</item>
        <item>AC</item>
        <item>AL</item>
        <item>AM</item>
        <item>AP</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MG</item>
        <item>MS</item>
        <item>MT</item>
        <item>PA</item>
        <item>PB</item>
        <item>PE</item>
        <item>PI</item>
        <item>PR</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RO</item>
        <item>RR</item>
        <item>RS</item>
        <item>SC</item>
        <item>SE</item>
        <item>SP</item>
        <item>TO</item>
    </string-array>

    <string-array name="states_usa_array" translatable="false">
        <item>@string/placeholder_default</item>
        <item>AK</item>
        <item>AL</item>
        <item>AR</item>
        <item>AZ</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DC</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>IA</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>MA</item>
        <item>MD</item>
        <item>MI</item>
        <item>MN</item>
        <item>MO</item>
        <item>MS</item>
        <item>MT</item>
        <item>NC</item>
        <item>ND</item>
        <item>NE</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NV</item>
        <item>NY</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VA</item>
        <item>VT</item>
        <item>WA</item>
        <item>WI</item>
        <item>WV</item>
        <item>WY</item>
    </string-array>

    <string name="vehicle_type_default_value">Vehicle Type</string>
    <string-array name="vehicle_types">
        <item>@string/vehicle_type_default_value</item>
        <item>Light</item>
        <item>Medium</item>
        <item>Heavy</item>
    </string-array>

    <string-array name="light_vehicle_types">
        <item>@string/vehicle_type_default_value</item>
        <item>Minivan</item>
        <item>Sport Utility Van (SUV)</item>
        <item>Pickup truck</item>
        <item>Panel truck</item>
        <item>Tow truck</item>
    </string-array>

    <string-array name="medium_vehicle_types">
        <item>@string/vehicle_type_default_value</item>
        <item>Box truck</item>
        <item>Van</item>
        <item>Cutaway Van Chassis</item>
        <item>Flatbed Truck</item>
    </string-array>

    <string-array name="heavy_vehicle_types">
        <item>@string/vehicle_type_default_value</item>
        <item>Dump Truck</item>
        <item>Log Carrier</item>
        <item>Refrigerator Truck</item>
        <item>Tractor Truck</item>
    </string-array>

    <string name="vehicle_size_default_value">Size</string>
    <string-array name="vehicle_sizes">
        <item>@string/vehicle_size_default_value</item>
        <item>up to 10ft</item>
        <item>11 to 14ft</item>
        <item>15 to 17ft</item>
        <item>18 to 20ft</item>
        <item>21 to 26ft</item>
        <item>more than 27ft</item>
    </string-array>

    <string name="vehicle_capacity_default_value">Max load</string>
    <string-array name="vehicle_capacities">
        <item>@string/vehicle_capacity_default_value</item>
        <item>Up to 2.000 pounds</item>
        <item>2.001 to 5.000 pounds</item>
        <item>5.001 to 8.000 pounds</item>
        <item>8.001 to 11.000 pounds</item>
        <item>11.001 to 15.000 pounds</item>
        <item>more than 15.001 pounds</item>
    </string-array>

</resources>
