<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/FormTitle"
        android:text="@string/login_information"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:transitionName="@string/transition_1"
                tools:ignore="UnusedAttribute"
                app:errorEnabled="true" >

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/EditText"
                    android:id="@+id/txt_email"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:transitionName="@string/transition_2"
                tools:ignore="UnusedAttribute"
                app:errorEnabled="true">

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/EditText"
                    android:id="@+id/txt_password"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                app:errorEnabled="true">

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/EditText"
                    android:id="@+id/txt_repeat_password"
                    android:hint="@string/repeat_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>