<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">

    <item
        android:id="@+id/action_request_delivery"
        android:orderInCategory="100"
        android:title="@string/new_delivery"
        app:showAsAction="never" />

    <item android:id="@+id/action_night_mode"
        android:orderInCategory="200"
        android:title="@string/night_mode"
        android:icon="@android:drawable/ic_menu_preferences"
        android:checkable="true">
    </item>

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="300"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>
