<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.LoginActivity">

    <include layout="@layout/dummy_focus_absorber" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:paddingStart="@dimen/xxlarge"
        android:paddingEnd="@dimen/xxlarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_xxxlarge"
            android:textAlignment="center"
            android:paddingBottom="@dimen/xxlarge"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:id="@+id/lyt_email"
            android:visibility="invisible"
            android:transitionName="@string/transition_1"
            tools:ignore="UnusedAttribute"
            app:errorEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                style="@style/EditText.Contrast"
                android:id="@+id/txt_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:id="@+id/lyt_password"
            android:visibility="invisible"
            android:transitionName="@string/transition_2"
            tools:ignore="UnusedAttribute"
            app:errorEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                style="@style/EditText.Contrast"
                android:id="@+id/txt_password"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/BtnSubmit"
            android:id="@+id/btn_login"
            android:text="@string/login"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium"
            android:gravity="center"
            android:text="@string/signup_link"
            android:textSize="@dimen/text_medium"
            android:textColor="@android:color/white"
            android:visibility="invisible"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>