<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<LinearLayout

    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/xxlarge"
    android:paddingEnd="@dimen/xxlarge">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_my_delivery_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/medium"
        android:layout_marginBottom="@dimen/medium"
        android:text="@string/my_delivery"
        android:textStyle="bold"
        android:padding="@dimen/medium"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/SimpleText"
            android:id="@+id/txt_current_bid"
            android:text="@string/first_to_bid"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/medium"
            android:layout_marginBottom="@dimen/medium"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/BtnMedium"
            android:id="@+id/btn_bid"
            android:text="@string/bid"
            android:layout_marginEnd="0px"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>



    <!-- ORIGIN -->

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/FormTitle"
        android:text="@string/origin"/>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/SimpleText"
        android:id="@+id/txt_origin_date"
        android:textSize="@dimen/text_large"/>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/SimpleText"
        android:id="@+id/txt_origin_address"
        android:maxLines="4" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/SimpleText"
        android:id="@+id/txt_origin_extra_info"
        android:text="@string/placeholder_extra_info_empty"/>



    <!-- DESTIN -->

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/FormTitle"
        android:text="@string/destin"/>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/SimpleText"
        android:id="@+id/txt_destin_date"
        android:textSize="@dimen/text_large"/>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/SimpleText"
        android:id="@+id/txt_destin_address"
        android:maxLines="4" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/SimpleText"
        android:id="@+id/txt_destin_extra_info"
        android:text="@string/placeholder_extra_info_empty"/>



    <!-- map -->
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_weight="1"/>

</LinearLayout>
</ScrollView>