<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/xxlarge"
    android:paddingEnd="@dimen/xxlarge">



    <!-- ORIGIN -->

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/FormTitle"
        android:text="@string/origin"/>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/SimpleText"
        android:id="@+id/txt_origin_date"
        android:textSize="@dimen/text_large"/>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/SimpleText"
        android:id="@+id/txt_origin_address"
        android:maxLines="4" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/SimpleText"
        android:id="@+id/txt_origin_extra_info"
        android:text="@string/placeholder_extra_info_empty"/>



    <!-- DESTIN -->

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/FormTitle"
        android:text="@string/destin"/>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/SimpleText"
        android:id="@+id/txt_destin_date"
        android:textSize="@dimen/text_large"/>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/SimpleText"
        android:id="@+id/txt_destin_address"
        android:maxLines="4" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/SimpleText"
        android:id="@+id/txt_destin_extra_info"
        android:text="@string/placeholder_extra_info_empty"/>



    <!-- map -->

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>